--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-27 17:00:55
+lastsearch = 2024-07-27 18:30:52
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng HOME COLLECTION H16 036 ...
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
 
 [cuahangchangagoidem.com]
-match = -66.7%%
-title = Chăn Ga Gối Đệm Cotton Giá Tốt Được Yêu Thích Nhất 2024
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cotton-dep/
+match = -45.8%%
+title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
 match = 0.0%%
