--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-27 17:16:14
+lastsearch = 2024-07-27 18:30:12
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu điều hòa giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa
+match = -33.3%%
+title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
 
 [demxanh.com]
 match = 14.8%%
@@ -123,8 +123,8 @@ url = https://vn.my-best.com/37456
 
 [demviethome.vn]
 match = 14.8%%
-title = Chiếu điều hòa Latex C24 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c24/
+title = Chiếu điều hòa Latex C14 giá rẻ hà nội. ...
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c14/
 
 [www.facebook.com]
 match = 60.0%%
