--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -12,9 +12,9 @@ title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
 url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
 
 [thacoanlac.vn]
-match = -133.3%%
-title = FD700B
-url = https://thacoanlac.vn/forland-fd700b
+match = -180.0%%
+title = FD990
+url = https://thacoanlac.vn/forland-fd900
 
 [vietnamese.alibaba.com]
 match = -256.2%%
