--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-27 17:22:35
+lastsearch = 2024-07-27 20:20:31
 
 [tiki.vn]
 match = -133.3%%
@@ -37,9 +37,9 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -86.7%%
-title = chăn cừu giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn cừu
+match = -193.3%%
+title = Chăn lông cừu 2 lớp loại dày siêu ấm cho bé (kt 100x140cm)
+url = https://shopee.vn/Chăn-lông-cừu-2-lớp-loại-dày-siêu-ấm-cho-bé-(kt-100x140cm)-i.37776623.7893775484
 
 [changadep88.vn]
 match = -86.7%%
@@ -159,5 +159,5 @@ url = https://audipet.com/cho-chan-cuu-duc.php
 [bibomart.com.vn]
 match = -86.7%%
 title = Chăn lông cừu 2 lớp màu đỏ mận (2m x 2.3m)
-url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html?srsltid=AfmBOoqs8_ZFGZZZZtaMDuRGOq2uhH_5444fa6XoGcn8uNnwtK6u0lWs
+url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html
 
