--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-27 15:35:34
+lastsearch = 2024-07-27 20:18:12
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -44.0%%
-title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ga trải giường thắng lợi
+match = -64.0%%
+title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
 
 [nemhana.com]
 match = -40.0%%
@@ -42,14 +42,14 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = 4.0%%
-title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
+match = -8.0%%
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html?srsltid=AfmBOoruoUkdh0OJlFmWVH2AiRRr26BjmIPKJH10D7pggZeDTddpDg19
 
 [www.lazada.vn]
-match = 0.0%%
-title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
+match = -12.0%%
+title = Vỏ Chăn Ga Gối đệm 180x200 Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/vo-chan-ga-goi-dem-180x200/?srsltid=AfmBOopjfLybo1cqjAReBbHkRzT8dDtcg0SgFY7F8wbPAoyWe1kFMzim
 
 [nemcaosuthangloi.vn]
 match = 12.0%%
