--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-27 10:15:46
+lastsearch = 2024-07-27 20:24:56
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gw-D45A1&sig=ACfU3U2ZCwwLIWucVy-yFndGuj_xjN8WGw&hl=en&sa=X&ved=2ahUKEwj0wrHR7r2HAxUoHUQIHSy1DZUQ6AF6BAgXEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxUF93H-&sig=ACfU3U1DeIYCk2UrfYCq1VkWjGL4ZvXmwQ&hl=en&sa=X&ved=2ahUKEwiMoq_uqMeHAxUJEFkFHUS5DxcQ6AF6BAgcEAM
 
 [ottawabraves.com]
 match = -292.3%%
