--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-27 16:50:59
+lastsearch = 2024-07-27 20:16:07
 
 [www.youtube.com]
 match = -420.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = -160.0%%
-title = marissa ren (@marstruck) Official
-url = https://www.tiktok.com/@marstruck?lang=en
+match = -70.0%%
+title = Ren 14 Days with You
+url = https://www.tiktok.com/discover/ren-14-days-with-you
 
 [nordicanglers.com]
 match = -120.0%%
