--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-07-27 13:17:05
+lastsearch = 2024-07-27 20:29:28
 
 [nemgiakho.com]
 match = 8.6%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-lien-a-1m8-chinh-hang-gia-re.html
 [www.liena.com.vn]
 match = 8.6%%
 title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
-url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien?srsltid=AfmBOoogg3rGTst1VFXNa6isBkB_pnkOdL54OqYCBRGx4M90_H3SQz0b
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
 
 [fefurniture.com.vn]
 match = 20.0%%
@@ -34,7 +34,7 @@ url = https://www.thegioinem.vn/vn/product/brand/nem-lien-a-15.html
 [demxanh.com]
 match = 11.4%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOopSEm0_r3LyAJ_hFWd92reyr2u-H2SNFa430PDPAS1sqSZlSBex
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
 
 [demcaosuliena.com]
 match = 48.0%%
@@ -79,7 +79,7 @@ url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html
 [www.diepxuan.com]
 match = 65.7%%
 title = Nệm caosu Liên Á Classic 180x200x10 - Điệp Xuân
-url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html?srsltid=AfmBOop0Q1rbHj1c73IHbsMhFsn2AD_vqpntYZM5O1AwSTeqWXgZJd_C
+url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 
 [nem.vn]
 match = 28.6%%
