--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-27 15:28:59
+lastsearch = 2024-07-27 20:15:48
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
-match = 75.0%%
-title = Thảm lông xù 150x190
-url = https://demre.com.vn/tham-long-xu-150x190-2
+match = 18.2%%
+title = Thảm ghế thảm giường - Trang 4
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [decoviet.vn]
 match = 22.2%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn chính hãng, giá tốt
 url = https://flexhouse.vn/tham-lot-san
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 36.4%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [www.lazada.vn]
 match = -77.3%%
