--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-27 20:23:33
+lastsearch = 2024-07-27 21:38:17
 
 [www.instagram.com]
-match = -246.2%%
-title = Yuki Chan (@yukichan_la) • Instagram photos and videos
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -238.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -53.8%%
+title = 40+ "Hoi Yan Chan" profiles
+url = https://www.linkedin.com/pub/dir/Hoi+Yan/Chan
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
@@ -205,4 +205,9 @@ url = https://chuatekming.wordpress.com/2016/02/06/nagato-yuki-chan-no-shoushits
 match = -130.8%%
 title = Yuki House Ramen in Wan Chai Hong Kong
 url = https://www.openrice.com/en/hongkong/p-yuki-house-ramen-p22165502
+
+[www.plkc.edu.hk]
+match = 0.0%%
+title = Scholarships - PLKC
+url = https://www.plkc.edu.hk/centenarian/scholarships/
 
