--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-27 21:11:03
+lastsearch = 2024-07-27 21:34:45
 
 [www.muji.com]
-match = 0.0%%
-title = 
-url = https://www.muji.com/ae/feature/whatismuji/
+match = 7.1%%
+title = chăn lông nhung xám mỏng
+url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chan-dong-long-vu-muji/
 [demxanh.com]
 match = -135.7%%
 title = Chăn tuyết Muji 01 | Chăn lông tuyết cao cấp
-url = https://demxanh.com/chan-tuyet-muji-01.html
+url = https://demxanh.com/chan-tuyet-muji-01.html?srsltid=AfmBOor2OJ-B8OchlC8iMRfa6YffCRGTzcOr-2ybGt8Nj8dty1ZBu-Ya
 
 [www.youtube.com]
 match = -14.3%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOooSwtTUWkplfUlBCnUqa_kfeNIlf6wO-IBGqHGpZKnX1R_6Ifs2
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/muji-pickling-rice-bran
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOopMZGYtE1FwoHPZS87t9kqCGKJf75ST832CMnK3vyn_ujYL4ycJ
 
 [sugoimart.com]
 match = -257.1%%
