--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-27 21:11:46
+lastsearch = 2024-07-27 21:41:04
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -132,9 +132,9 @@ title = Thực phẩm bảo vệ sức khỏe Vitamin B Mix DHC | healthyct.vn
 url = https://healthyct.vn/san-pham/vitamin-b-mix-dhc/
 
 [www.tiktok.com]
-match = -17.6%%
-title = Amin Nina Tiểu Sử
-url = https://www.tiktok.com/discover/amin-nina-tiểu-sử
+match = -57.1%%
+title = Tức ak, thoa kem cho cố buổi sáng táp táp giùm em kem ...
+url = https://www.tiktok.com/@chanhbeauty93/video/7237827360110726406
 
 [www.scribd.com]
 match = -10.7%%
@@ -177,9 +177,9 @@ title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 
 [abina.vn]
-match = -75.0%%
-title = Viên uống Xtend-Life NR6: tăng sinh NAD tự nhiên, chống lão ...
-url = https://abina.vn/xtend-life-nr6-tang-sinh-nad-tu-nhien-tang-cuong-tuoi-tho/
+match = -57.1%%
+title = Bột làm 1kg sữa chua Hy Lạp vị mật ong manuka Easiyo - Abina
+url = https://abina.vn/sua-chua-hy-lap-mat-ong-manuka-easiyo-manuka-honey/
 
 [kinhtexaydung.gov.vn]
 match = -21.4%%
