--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-07-27 16:20:41
+lastsearch = 2024-07-27 21:40:24
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [chieutrelinhchi.com]
-match = 3.6%%
-title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1m6x1m9
-url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-khong-vien-mau-vang-1m6x1m9-91.html
+match = 0.0%%
+title = Chiếu trúc hạt nhỏ không viền màu nâu đen Size: 1m8x2m
+url = https://chieutrelinhchi.com/chieu-truc-1m8/chieu-truc-hat-nho-khong-vien-mau-nau-1m8x2m-101.html
 
 [dem24h.vn]
 match = 46.4%%
@@ -42,9 +42,9 @@ title = Chiếu trúc hạt đen có viền
 url = https://tongkhonem.com/san-pham/chieu-truc-hat-den-co-vien/
 
 [www.sendo.vn]
-match = 10.7%%
-title = Chiếu trúc đen không viền 1m6x2m [Được kiểm hàng ...
-url = https://www.sendo.vn/chieu-truc-den-khong-vien-1m6x2m-duo-c-kie-m-ha-ng-31981016-116709018.html
+match = 0.0%%
+title = Chiếu trúc hạt đen cao cấp không viền 1m2x1m9 [Được ...
+url = https://www.sendo.vn/chieu-truc-hat-den-cao-cap-khong-vien-1m2x1m9-duo-c-kie-m-ha-ng-19203070-117250609.html
 
 [chanrathanhthuy.com]
 match = -3.6%%
