--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-27 20:30:23
+lastsearch = 2024-07-27 21:37:54
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiPKlk8&sig=ACfU3U2dgXujtvljpUpYlQ4EquPyZMLWYQ&hl=en&sa=X&ved=2ahUKEwiDuMyKqseHAxUjmIkEHb91DYoQ6AF6BAgeEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiQElp9&sig=ACfU3U1XYpBsir5pqx_nccgxNQ2k-KjMIg&hl=en&sa=X&ved=2ahUKEwja8_iVuceHAxWBFlkFHUXvATEQ6AF6BAgmEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
