--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-27 19:32:55
+lastsearch = 2024-07-27 21:43:28
 
 [sieuthidemonline.vn]
-match = -66.7%%
-title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
-url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
+match = -19.0%%
+title = Nệm lò xo Techwood cao cấp giá rẻ tại Hà Nội
+url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/attachment/dem-lo-xo-techwood/
 
 [tuananh.vn]
 match = 52.4%%
@@ -24,12 +24,12 @@ url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 [demxanh.com]
 match = -95.2%%
 title = Bảng giá đệm lò xo Tuấn Anh khuyến mãi mới nhất năm ...
-url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html
+url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html?srsltid=AfmBOorssqGiBwU7YBTAY3PkbpG_Tbl5zoCWmgJYUJ5K87n-qbA78PZT
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOooHcZqonlADo9ayLfE0PGerLYiE-_IQ3wiHXQlU3y9_WsOAZfd9
 
 [shopee.vn]
 match = -61.9%%
@@ -77,9 +77,9 @@ title = Bảng giá khuyến mại đệm lò xo Techwood chất lượng cao!
 url = https://demhong.vn/dem-lo-xo-techwood/
 
 [demtot.com]
-match = 38.9%%
-title = Đệm lò xo Tuấn Anh
-url = https://demtot.com/dem-lo-xo-tuan-anh/
+match = 36.8%%
+title = Đệm lò xo Vạn Thành
+url = https://demtot.com/dem-lo-xo-van-thanh/
 
 [sites.google.com]
 match = -47.6%%
