--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-27 12:44:18
+lastsearch = 2024-07-27 21:43:07
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -6.2%%
-title = Spencer Behr, MD
-url = https://profiles.ucsf.edu/spencer.behr
+match = 11.1%%
+title = Marina Sirota, PhD
+url = https://profiles.ucsf.edu/marina.sirota
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -309,7 +309,7 @@ url = https://www.ochealthinfo.com/sites/hca/files/import/data/files/25864.pdf
 [profiles.stanford.edu]
 match = -25.0%%
 title = Kevin Schulman - Stanford Profiles
-url = https://profiles.stanford.edu/kevin-schulman?tab=teaching
+url = https://profiles.stanford.edu/kevin-schulman
 
 [publichealth.lacounty.gov]
 match = -155.0%%
