--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-27 21:20:01
+lastsearch = 2024-07-28 01:47:07
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -87.5%%
-title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
+match = -33.3%%
+title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22011
+url = https://www.everonvn.vn/chi-tiet/everon-esm22011.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 [everon.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOordx-i__bH8knFMsgqaZRUgf3l3Kjdv8m6RujTgcZC3hS47riHs
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -90,4 +90,9 @@ url = https://www.facebook.com/GachongthamHP/?locale=gl_ES
 match = -12.5%%
 title = Bộ chăn ga Everon ESB22051 - Mẫu mới 2022
 url = http://www.changagoidemeveron.vn/3/everon/bo-chan-ga-everon-esb-22051-2022.html
+
+[everonmienbac.vn]
+match = 8.3%%
+title = Bảng báo giá Bộ Everon ESB-22051
+url = https://everonmienbac.vn/bo-everon-esb-22051/
 
