--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-28 00:47:00
+lastsearch = 2024-07-28 01:45:46
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -67,9 +67,9 @@ title = Nệm cao su Kym Đan Massage - Chăn ga gối đệm Phương Bắc
 url = https://changagoidemphuongbac.com/nem-cao-su-kym-dan-massage?yith_wcan=1&min_price=3000000&max_price=5000000&product_cat=bo-chan-ga-phu&query_type_loai=and&filter_loai=chan&query_type_thuong-hieu=and&filter_thuong-hieu=lasante&query_type_kich-thuoc=and&filter_kich-thuoc=200x220cm,160x200cm,180x200cm
 
 [thuongtruong.com.vn]
-match = -125.0%%
-title = Coi thường cơ quan chức năng, Vua Nệm nhiều lần vi ...
-url = https://thuongtruong.com.vn/news/coi-thuong-co-quan-chuc-nang-vua-nem-nhieu-lan-vi-pham-quy-dinh-xuc-tien-thuong-mai-9141.html
+match = -105.0%%
+title = Vua Nệm khuyến mãi lớn dịp khai trương 2 cửa hàng tại ...
+url = https://thuongtruong.com.vn/news/vua-nem-khuyen-mai-lon-dip-khai-truong-2-cua-hang-tai-hai-phong-va-ninh-binh-6697.html
 
 [remdemgiaphat.com]
 match = -75.0%%
