--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-28 01:21:02
+lastsearch = 2024-07-28 02:45:23
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/hoangtuetam
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVRFpG1B&sig=ACfU3U2r13TvmvY_bZLJVBSYBUoINsCByg&hl=en&sa=X&ved=2ahUKEwiopp2G68eHAxVFMzQIHdF2AfUQ6AF6BAgXEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVRFuHZC&sig=ACfU3U0RP6cClaOdmCNwW6mIBtSv3rMwTw&hl=en&sa=X&ved=2ahUKEwi-0bTz_ceHAxWfFFkFHWNiDpoQ6AF6BAgXEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -57,9 +57,9 @@ title = Nồi inox 304 đa đáy cán dài NAG1358-16 (16cm)
 url = https://shop.nagakawa.com.vn/noi-inox-304-da-day-nag1358-16cm-dung-tren-moi-loai-bep.html
 
 [giaiphapchung.vn]
-match = 20.0%%
-title = Giải mã LCD i2C 1602
-url = https://giaiphapchung.vn/giai-ma-lcd-i2c-1602
+match = 11.5%%
+title = Màn hình LCD 1602 có giải mã I2C
+url = https://giaiphapchung.vn/module-lcd1602-i2c-arduino
 
 [www.diepxuan.com]
 match = 96.2%%
