--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-27 20:31:29
+lastsearch = 2024-07-28 02:46:27
 
 [hoa18.com]
-match = -50.0%%
-title = Về Hoa18
-url = https://hoa18.com/thong-tin/ve-hoa-18
+match = -84.2%%
+title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
+url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
 match = -147.4%%
@@ -37,9 +37,9 @@ title = Nâng cao năng lực phân tích hình ảnh soi chiếu hàng hóa ...
 url = https://thoibaotaichinhvietnam.vn/nang-cao-nang-luc-phan-tich-hinh-anh-soi-chieu-hang-hoa-xuat-nhap-khau-128029.html
 
 [vi.wikipedia.org]
-match = 5.3%%
-title = Lệnh Ý Hoàng quý phi
-url = https://vi.wikipedia.org/wiki/Lệnh_Ý_Hoàng_quý_phi
+match = -47.4%%
+title = Mạc Thiên Tứ – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Mạc_Thiên_Tứ
 
 [moc.gov.vn]
 match = -147.4%%
